--- a/06_Object_Oriented_Programming.ipynb
+++ b/06_Object_Oriented_Programming.ipynb
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,161 +350,21 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
+   "cell_type": "markdown",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<center>\n",
-       "<table>\n",
-       "<thead>\n",
-       "<tr>\n",
-       "<th>Built in Functions</th>\n",
-       "<th>Special Method</th>\n",
-       "<th>Functionality</th>\n",
-       "</tr>\n",
-       "</thead>\n",
-       "<tbody>\n",
-       "<tr>\n",
-       "<td><strong>len(x)</strong></td>\n",
-       "<td>use __len__(self)</td>\n",
-       "<td>length of x</td>\n",
-       "</tr>\n",
-       "<tr>\n",
-       "<td><strong>float(x)</strong></td>\n",
-       "<td>__float(self)__</td>\n",
-       "<td>float equivalent of x</td>\n",
-       "</tr>\n",
-       "<tr>\n",
-       "<td><strong>int(x)</strong></td>\n",
-       "<td>__int__(self)</td>\n",
-       "<td>integer equivalent of x</td>\n",
-       "</tr>\n",
-       "<tr>\n",
-       "<td><strong>str(x)</strong></td>\n",
-       "<td>__str__(self)</td>\n",
-       "<td>string representation of x</td>\n",
-       "</tr>\n",
-       "<tr>\n",
-       "<td><strong>abs(x)</strong></td>\n",
-       "<td>__abs__(self)</td>\n",
-       "<td>absolute value of x</td>\n",
-       "</tr>\n",
-       "<tr>\n",
-       "<td><strong>hash(x)</strong></td>\n",
-       "<td>__hash__(self)</td>\n",
-       "<td>integer hash code for x</td>\n",
-       "</tr>\n",
-       "<tr>\n",
-       "<td><strong>iter(x)</strong></td>\n",
-       "<td>__iter__(self)</td>\n",
-       "<td>iterator for x</td>\n",
-       "</tr>\n",
-       "</tbody>\n",
-       "</table>\n",
-       "\n",
-       "<!-- following script was found in pastebin https://pastebin.com/H77xP2vN for hiding all cells and needed to be adapted -->\n",
-       "<p align=\"left\">\n",
-       "<script>\n",
-       "code_show=true; \n",
-       "function code_toggle() {\n",
-       " if (code_show){\n",
-       " $('div.cell.code_cell.rendered.selected div.input').hide();\n",
-       " } else {\n",
-       " $('div.cell.code_cell.rendered.selected div.input').show();\n",
-       " }\n",
-       " code_show = !code_show\n",
-       "} \n",
-       "$().ready(code_toggle);\n",
-       "\n",
-       "</script>\n",
-       "<p style=\"text-align:left;\">\n",
-       "<a href=javascript:code_toggle()>Display table code</a>\n",
-       "<span style=\"float:right;\"><a href=\"http://www.yahoo.com\">Table source</a></span>\n",
-       "</p>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
    "source": [
-    "\n",
-    "%%html\n",
-    "<center>\n",
-    "<table>\n",
-    "<thead>\n",
-    "<tr>\n",
-    "<th>Built in Functions</th>\n",
-    "<th>Special Method</th>\n",
-    "<th>Functionality</th>\n",
-    "</tr>\n",
-    "</thead>\n",
-    "<tbody>\n",
-    "<tr>\n",
-    "<td><strong>len(x)</strong></td>\n",
-    "<td>use __len__(self)</td>\n",
-    "<td>length of x</td>\n",
-    "</tr>\n",
-    "<tr>\n",
-    "<td><strong>float(x)</strong></td>\n",
-    "<td>__float(self)__</td>\n",
-    "<td>float equivalent of x</td>\n",
-    "</tr>\n",
-    "<tr>\n",
-    "<td><strong>int(x)</strong></td>\n",
-    "<td>__int__(self)</td>\n",
-    "<td>integer equivalent of x</td>\n",
-    "</tr>\n",
-    "<tr>\n",
-    "<td><strong>str(x)</strong></td>\n",
-    "<td>__str__(self)</td>\n",
-    "<td>string representation of x</td>\n",
-    "</tr>\n",
-    "<tr>\n",
-    "<td><strong>abs(x)</strong></td>\n",
-    "<td>__abs__(self)</td>\n",
-    "<td>absolute value of x</td>\n",
-    "</tr>\n",
-    "<tr>\n",
-    "<td><strong>hash(x)</strong></td>\n",
-    "<td>__hash__(self)</td>\n",
-    "<td>integer hash code for x</td>\n",
-    "</tr>\n",
-    "<tr>\n",
-    "<td><strong>iter(x)</strong></td>\n",
-    "<td>__iter__(self)</td>\n",
-    "<td>iterator for x</td>\n",
-    "</tr>\n",
-    "</tbody>\n",
-    "</table>\n",
-    "\n",
-    "<!-- following script was found in pastebin https://pastebin.com/H77xP2vN for hiding all cells and needed to be adapted -->\n",
-    "<p align=\"left\">\n",
-    "<script>\n",
-    "code_show=true; \n",
-    "function code_toggle() {\n",
-    " if (code_show){\n",
-    " $('div.cell.code_cell.rendered.selected div.input').hide();\n",
-    " } else {\n",
-    " $('div.cell.code_cell.rendered.selected div.input').show();\n",
-    " }\n",
-    " code_show = !code_show\n",
-    "} \n",
-    "$().ready(code_toggle);\n",
-    "\n",
-    "</script>\n",
-    "<p style=\"text-align:left;\">\n",
-    "<a href=javascript:code_toggle()>Display table code</a>\n",
-    "<span style=\"float:right;\"><a href=\"http://www.yahoo.com\">Table source</a></span>\n",
-    "</p>\n"
+    "| Built In Functions | Special Method | Functionality  |\n",
+    "| ------------- |:-------------:| -----:|\n",
+    "| len(x)   | \\_&#95;len\\__(self) | length of x |\n",
+    "| float(x) |\\_&#95;float\\__(self)    | float equivalent of x |\n",
+    "| int(x) | \\_&#95;int\\__(self) | integer equivalent of x |\n",
+    "| str(x | \\_&#95;str\\__(self) | string representation of x |\n",
+    "| abs(x) | \\_&#95;abs\\__(self) | absolute value of x |\n",
+    "| hash(x)  | \\_&#95;hash\\__(self) | integer hash code for x |\n",
+    "| iter(x)  | \\_&#95;iter\\__(self) | iterator for x |\n",
+    "<div style=\"text-align: right\"> [Table source](https://www.yahoo.com/) </div>"
    ]
   },
   {
