--- a/06_Object_Oriented_Programming.ipynb
+++ b/06_Object_Oriented_Programming.ipynb
@@ -17,12 +17,12 @@
     "## Introduction\n",
     "<a id=\"program_paradigms\"></a>\n",
     "\n",
+    "\\begin{align}\n",
+    "\\ \"Object-oriented\\:design\\:is\\:the\\:roman\\:numerals\\:of\\:computing\" -\\:Rob Pike\\\\\n",
+    "\\end{align}\n",
     "\n",
-    "<pre><code><div style=\"background-color:rgb(239, 239, 239)\">\n",
-    "<p><cite>\"Object-oriented design is the roman numerals of computing\"   by Rob Pike</cite></p> \n",
-    "</div></code></pre>\n",
     "\n",
-    "Object-oriented programming (OOP) is often referred to as a new programming paradigm. It’s popularity has been growing for several decades now, starting from the initial attempts back in the 60s to some of the most important languages used nowadays. Being a set of programming concepts and design methodologies, it essentially offers a way of thinking. \n",
+    "Object-oriented programming (OOP) is often referred to as a new programming paradigm. Its popularity has been growing for several decades now, starting from the initial attempts back in the 60s to some of the most important languages used nowadays. Being a set of programming concepts and design methodologies, it essentially offers a way of thinking. \n",
     "\n",
     "In the following section we will look at three __programming paradigms__ before we introduce __Object-oriented programming__. We will elaborate on the definition and implementation of __classes__, __objects__ and __methods__.\n",
     "The last section focuses on the __fundamental principles of OOP__ and draws a __comparison__ to other paradigms.\n",
