--- a/06_Object_Oriented_Programming.ipynb
+++ b/06_Object_Oriented_Programming.ipynb
@@ -18,7 +18,7 @@
     "<a id=\"program_paradigms\"></a>\n",
     "\n",
     "\\begin{align}\n",
-    "\\ \"Object-oriented\\:design\\:is\\:the\\:roman\\:numerals\\:of\\:computing\" -\\:Rob Pike\\\\\n",
+    "\\ Object-oriented\\:design\\:is\\:the\\:roman\\:numerals\\:of\\:computing. -\\:Rob\\:Pike\\\\\n",
     "\\end{align}\n",
     "\n",
     "\n",
