--- a/06_Object_Oriented_Programming.ipynb
+++ b/06_Object_Oriented_Programming.ipynb
@@ -16,8 +16,9 @@
    "source": [
     "## Introduction\n",
     "<a id=\"program_paradigms\"></a>\n",
-    "\n",
-    "$$Object-oriented\\:design\\:is\\:the\\:roman\\:numerals\\:of\\:computing. -\\:Rob\\:Pike$$\n",
+    "  \n",
+    "  \n",
+    "$$''Object\\:oriented\\:design\\:is\\:the\\:roman\\:numerals\\:of\\:computing.''\\:-\\:Rob\\:Pike$$\n",
     "\n",
     "\n",
     "Object-oriented programming (OOP) is often referred to as a new programming paradigm. Its popularity has been growing for several decades now, starting from the initial attempts back in the 60s to some of the most important languages used nowadays. Being a set of programming concepts and design methodologies, it essentially offers a way of thinking. \n",
