--- a/06_Object_Oriented_Programming.ipynb
+++ b/06_Object_Oriented_Programming.ipynb
@@ -17,11 +17,13 @@
     "## Introduction\n",
     "<a id=\"program_paradigms\"></a>\n",
     "  \n",
-    "  \n",
     "$$''Object\\:oriented\\:design\\:is\\:the\\:roman\\:numerals\\:of\\:computing.''\\:-\\:Rob\\:Pike$$\n",
     "\n",
+    "<pre><code><div style=\\\"background-color:rgb(239, 239, 239)\\\">\n",
+    "<p><cite>\"Object-oriented design is the roman numerals of computing\"   by Rob Pike</cite></p>\n",
+    "</div></code></pre>\n",
     "\n",
-    "Object-oriented programming (OOP) is often referred to as a new programming paradigm. Its popularity has been growing for several decades now, starting from the initial attempts back in the 60s to some of the most important languages used nowadays. Being a set of programming concepts and design methodologies, it essentially offers a way of thinking. \n",
+    "Object-oriented programming (OOP) is often referred to as a new programming paradigm. Its popularity is increasing, starting from the initial attempts of its implementation back in the 60s to being in some of the most prevalent languages nowadays. As a set of programming concepts and design methodologies, it essentially offers a way of thinking. \n",
     "\n",
     "In the following section we will look at three __programming paradigms__ before we introduce __Object-oriented programming__. We will elaborate on the definition and implementation of __classes__, __objects__ and __methods__.\n",
     "The last section focuses on the __fundamental principles of OOP__ and draws a __comparison__ to other paradigms.\n",
@@ -130,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +141,7 @@
        "True"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,6 +159,12 @@
     "An object is an instance of a type. In other words, 'Hello world' is an instance of a string, 123456789 of an integer and \\[a, b, c] of a string.\n",
     "\n",
     "To create and use your own types and create objects of that type, all you need are three simple steps.\n",
+    "\n",
+    "\\begin{gather*}\n",
+    "Step\\:1:\\:Define\\:a\\:Class\\:by\\:initializing\\:attributes \\\\\n",
+    "Step\\:2:\\:Initialize\\:Methods \\\\\n",
+    "Step\\:3:\\:Instantiate\\:Objects \\\\\n",
+    "\\end{gather*}\n",
     "\n",
     "<pre><code><div style=\"background-color:rgb(218, 255, 181)\">Step 1: Define a Class by initializing attributes\n",
     "Step 2: Initialize Methods\n",
