--- a/06_Object_Oriented_Programming.ipynb
+++ b/06_Object_Oriented_Programming.ipynb
@@ -160,7 +160,7 @@
     "\\begin{gather*}\n",
     "Step\\:1:\\:Define\\:a\\:Class\\:by\\:initializing\\:attributes \\\\\n",
     "Step\\:2:\\:Initialize\\:Methods \\\\\n",
-    "Step\\:3:\\:Instantiate\\:Objects \\\\\n",
+    "Step\\:3:\\:Instantiate\\:Objects \n",
     "\\end{gather*}\n",
     "\n",
     "<pre><code><div style=\"background-color:rgb(218, 255, 181)\">Step 1: Define a Class by initializing attributes\n",
@@ -368,7 +368,9 @@
     "| abs(x) | \\_&#95;abs\\__(self) | absolute value of x |\n",
     "| hash(x)  | \\_&#95;hash\\__(self) | integer hash code for x |\n",
     "| iter(x)  | \\_&#95;iter\\__(self) | iterator for x |\n",
-    "<div style=\"text-align: right\"> [Table source](https://www.yahoo.com/) </div>"
+    "\\begin{align*}\n",
+    "\\href{http://www.sharelatex.com}{Table Source} \n",
+    "\\end{align*}\n"
    ]
   },
   {
