--- a/06_Object_Oriented_Programming.ipynb
+++ b/06_Object_Oriented_Programming.ipynb
@@ -370,7 +370,8 @@
     "| iter(x)  | \\_&#95;iter\\__(self) | iterator for x |\n",
     "\\begin{align*}\n",
     "\\href{http://www.sharelatex.com}{Table Source} \n",
-    "\\end{align*}\n"
+    "\\end{align*}\n",
+    "[Table Source](http://www.sharelatex.com)\n"
    ]
   },
   {
