--- a/06_Object_Oriented_Programming.ipynb
+++ b/06_Object_Oriented_Programming.ipynb
@@ -195,7 +195,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It's important to higlight that we have defined both class-wide attributes (the species) and instance-specific attributes such as the name and age. \n",
+    "It's important to highlight that we have defined both class-wide attributes (the species) and instance-specific attributes such as the name and age. \n",
     "\n",
     "## Step 2: Initialize methods\n",
     "\n",
@@ -224,7 +224,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note that the only argument is 'self' here. The \"self\" argument refers to the object or the bound variable itself. The output is the same for King Kong and Donkey Kong. To get instance-specific output we can use their attributes. "
+    "Note that the only argument is 'self' here. The \"self\" argument refers to the object or the bound variable itself. The output is the same for King Kong and Donkey Kong. To get instance-specific output we can use their specific attributes. "
    ]
   },
   {
