--- a/06_Object_Oriented_Programming.ipynb
+++ b/06_Object_Oriented_Programming.ipynb
@@ -595,7 +595,164 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "food = [\"Solids\", \"Liquids\"]\n",
+    "\n",
+    "print(\"Mouth:\")\n",
+    "print(\"Food is eaten.\")\n",
+    "\n",
+    "print(\"\\nStomach:\")\n",
+    "for (i, component) in enumerate(food):\n",
+    "    if food[i] == \"Solids\":\n",
+    "        print(\"{} are digested into nutrients.\".format(food[i]))\n",
+    "        food[i] = \"Nutrients\"\n",
+    "    else:\n",
+    "        pass\n",
+    "\n",
+    "print(\"\\nSmall Intestine:\")\n",
+    "for (i, component) in enumerate(food):\n",
+    "    if food[i] == \"Nutrients\":\n",
+    "        print(\"{} are absorbed, leaving solid waste.\".format(food[i]))\n",
+    "        food[i] = \"Solid waste\"\n",
+    "    elif food[i] == \"Liquids\":\n",
+    "        print(\"{} are absorbed, leaving water.\".format(food[i]))\n",
+    "        food[i] = \"Water\"\n",
+    "\n",
+    "print(\"\\nLarge Intestine:\")\n",
+    "for (i, component) in enumerate(food):\n",
+    "    if food[i] == \"Solid waste\":\n",
+    "        pass\n",
+    "    elif food[i] == \"Water\":\n",
+    "        print(\"{} is absorbed.\".format(food[i]))\n",
+    "        food.remove(food[i])\n",
+    "\n",
+    "print(\"\\nAnus:\")\n",
+    "print(\"{} is defecated.\".format(food[0]))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def eat(food):\n",
+    "    print(\"Food is eaten.\")\n",
+    "\n",
+    "def digest(food):\n",
+    "    for (i, component) in enumerate(food):\n",
+    "        if food[i] == \"Solids\":\n",
+    "            print(\"{} are digested into nutrients.\".format(food[i]))\n",
+    "            food[i] = \"Nutrients\"\n",
+    "        else:\n",
+    "            pass\n",
+    "\n",
+    "def absorb_nutrients(food):\n",
+    "    for (i, component) in enumerate(food):\n",
+    "        if food[i] == \"Nutrients\":\n",
+    "            print(\"{} are absorbed, leaving solid waste.\".format(food[i]))\n",
+    "            food[i] = \"Solid waste\"\n",
+    "        elif food[i] == \"Liquids\":\n",
+    "            print(\"{} are absorbed, leaving water.\".format(food[i]))\n",
+    "            food[i] = \"Water\"\n",
+    "                \n",
+    "    \n",
+    "    \n",
+    "def absorb_water(food):\n",
+    "    for (i, component) in enumerate(food):\n",
+    "        if food[i] == \"Solid waste\":\n",
+    "            pass\n",
+    "        elif food[i] == \"Water\":\n",
+    "            print(\"{} is absorbed.\".format(food[i]))\n",
+    "            food.remove(food[i])\n",
+    "\n",
+    "def defecation(food):\n",
+    "    print(\"{} is defecated.\".format(food[0]))\n",
+    "\n",
+    "\n",
+    "\n",
+    "food = [\"Solids\", \"Liquids\"]\n",
+    "\n",
+    "print(\"Mouth:\")\n",
+    "eat(food)\n",
+    "\n",
+    "print(\"\\nStomach:\")\n",
+    "digest(food)\n",
+    "\n",
+    "print(\"\\nSmall Intestine:\")\n",
+    "absorb_nutrients(food)\n",
+    "\n",
+    "print(\"\\nLarge Intestine:\")\n",
+    "absorb_water(food)\n",
+    "\n",
+    "print(\"\\nAnus:\")\n",
+    "defecation(food)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Monkey:\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "        pass\n",
+    "\n",
+    "    def mouth(self, food):\n",
+    "        print(\"Mouth:\")\n",
+    "        print(\"Food is eaten.\")\n",
+    "    \n",
+    "    def stomach(self, food):\n",
+    "        print(\"\\nStomach:\")\n",
+    "        for (i, component) in enumerate(food):\n",
+    "            if food[i] == \"Solids\":\n",
+    "                print(\"{} are digested into nutrients.\".format(food[i]))\n",
+    "                food[i] = \"Nutrients\"\n",
+    "            else:\n",
+    "                pass\n",
+    "    \n",
+    "    def small_intestine(self, food):\n",
+    "        print(\"\\nSmall Intestine:\")\n",
+    "        for (i, component) in enumerate(food):\n",
+    "            if food[i] == \"Nutrients\":\n",
+    "                print(\"{} are absorbed, leaving solid waste.\".format(food[i]))\n",
+    "                food[i] = \"Solid waste\"\n",
+    "            elif food[i] == \"Liquids\":\n",
+    "                print(\"{} are absorbed, leaving water.\".format(food[i]))\n",
+    "                food[i] = \"Water\"\n",
+    "                    \n",
+    "        \n",
+    "        \n",
+    "    def large_intestine(self, food):    \n",
+    "        print(\"\\nLarge Intestine:\")\n",
+    "        for (i, component) in enumerate(food):\n",
+    "            if food[i] == \"Solid waste\":\n",
+    "                pass\n",
+    "            elif food[i] == \"Water\":\n",
+    "                print(\"{} is absorbed.\".format(food[i]))\n",
+    "                food.remove(food[i])\n",
+    "    \n",
+    "    def anus(self, food):\n",
+    "        print(\"\\nAnus:\")\n",
+    "        print(\"{} is defecated.\".format(food[0]))\n",
+    "\n",
+    "\n",
+    "\n",
+    "kingkong = Monkey()\n",
+    "food = [\"Solids\", \"Liquids\"]\n",
+    "\n",
+    "kingkong.mouth(food)\n",
+    "\n",
+    "kingkong.stomach(food)\n",
+    "\n",
+    "kingkong.small_intestine(food)\n",
+    "\n",
+    "kingkong.large_intestine(food)\n",
+    "\n",
+    "kingkong.anus(food)\n"
+   ]
   }
  ],
  "metadata": {
