--- a/06_Object_Oriented_Programming.ipynb
+++ b/06_Object_Oriented_Programming.ipynb
@@ -56,8 +56,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.1 Imperative\n",
     "<a id=\"imperative_comparison\"></a>\n",
+    "### 2.1 Imperative\n",
     "\n",
     "Using the analogy of programming as a problem-solving methodology, imperative programming defines a program as a series of steps, sequentially running each line of code, one by one until a solution is found. While this is often the simplest and most intuitive way to structure small programs like the one below, large imperative programs have a tendency to turn into unmanageable \"spaghetti code\". \n",
     "\n",
@@ -147,8 +147,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.2 Functional\n",
     "<a id=\"functional_comparison\"></a>\n",
+    "### 2.2 Functional\n",
+    "\n",
     "\n"
    ]
   },
@@ -246,8 +247,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id=\"oop_comparison\"></a>\n",
     "### 2.3 Object-Oriented Programming\n",
-    "<a id=\"OOP_comparison\"></a>\n",
+    "\n",
     "\n"
    ]
   },
@@ -351,7 +353,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id=\"OOP\"></a>\n",
+    "<a id=\"oop\"></a>\n",
     "## 3. More about Object-Oriented Programming\n",
     "\n",
     "### 3.1 So, what is Object-Oriented Programming?\n",
