--- a/06_Object_Oriented_Programming.ipynb
+++ b/06_Object_Oriented_Programming.ipynb
@@ -34,7 +34,7 @@
    "metadata": {},
    "source": [
     "<a id=\"introduction\"></a>\n",
-    "## 1. Introduction\n",
+    "## Introduction\n",
     "\n",
     "$$\\\\$$\n",
     "$$''Object\\:oriented\\:design\\:is\\:the\\:roman\\:numerals\\:of\\:computing.''\\:-\\:Rob\\:Pike$$\n",
@@ -49,7 +49,7 @@
    "metadata": {},
    "source": [
     "<a id=\"comparison\"></a>\n",
-    "## 2. Comparison of Programming Paradigms\n",
+    "## Comparison of Programming Paradigms\n",
     "\n",
     "Programming languages are often classified by the programming paradigm they mainly support. The features of each programming language often encourage, or even mandate, structuring the various parts of a program in a specific way. While Python is often referred to as an object-oriented language, it is probably best described as a multi-paradigm programming language as its features also support many other programming paradigms.\n",
     "\n",
@@ -68,7 +68,7 @@
    "metadata": {},
    "source": [
     "<a id=\"imperative_comparison\"></a>\n",
-    "### 2.1 Imperative\n",
+    "### Imperative\n",
     "\n",
     "Using the analogy of programming as a problem-solving methodology, imperative programming defines a program as a series of steps, sequentially running each line of code one by one until a solution is found. While this is often the simplest and most intuitive way to structure small programs (like the one in the example below), larger imperative programs have a tendency to become unreliable and unmanageable. \n",
     "\n",
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
    "metadata": {},
    "source": [
     "<a id=\"functional_comparison\"></a>\n",
-    "### 2.2 Functional\n",
+    "### Functional\n",
     "\n",
     "Functional programming attempts to manage complexity by focusing on the use of \"pure functions\" to control the transformation of state. Pure functions are functions that rely only on the given arguments to produce output i.e. they do not rely on any global variables, and by extension, are not affected by unexpected changes in the global state. This makes the program much less vulnerable to side effects, and greatly increases the reliability of the code.\n",
     "\n",
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +270,7 @@
    "metadata": {},
    "source": [
     "<a id=\"oop_comparison\"></a>\n",
-    "### 2.3 Object-Oriented Programming\n",
+    "### Object-Oriented Programming\n",
     "\n",
     "The object-oriented programming paradigm, in contrast to the functional programming paradigm, believes that the better way to manage the complexity of code is to group state and function together in structures called \"objects\". After all, in real life, state and function are rarely separated the way it is in functional programming; instead, object-oriented programming tries to organise code in a way that reflects reality, where objects perform functions that transform some state associated with itself.\n",
     "\n",
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -388,11 +388,11 @@
    "metadata": {},
    "source": [
     "<a id=\"oop\"></a>\n",
-    "## 3. More about Object-Oriented Programming\n",
+    "## More about Object-Oriented Programming\n",
     "\n",
     "Object-oriented programming (OOP) is based on the idea that we are no longer primarily focused on the logic or actions of our program but rather on the data itself, in particular the objects of our program. While object-oriented programming serves a similar purpose as functional programming i.e. eliminating the global state, it does this differently, by allowing us to store variables in objects rather than functions. Our programming is therefore centered around the objects themselves. \n",
     "\n",
-    "To create and use your own types and create objects of that type, all you need are three simple steps.\n",
+    "To create and use your own types and create objects of that type, all you need is three simple steps.\n",
     "\n",
     "\\begin{gather*}\n",
     "Step\\:1:\\:Define\\:a\\:Class\\:by\\:initializing\\:attributes \\\\\n",
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -550,7 +550,7 @@
      "output_type": "stream",
      "text": [
       "kingkong\n",
-      "<__main__.Gorilla object at 0x000001ACC8201828>\n"
+      "<__main__.Gorilla object at 0x0000012A8CCB5DA0>\n"
      ]
     }
    ],
@@ -565,7 +565,7 @@
    "source": [
     "Our first code line simply prints its string input. \n",
     "\n",
-    "However the second code line refers to our object, kingkong, our Gorilla named \"King Kong\" and 15 years of age. But what is our function print actually doing? It tells us about our object kingkong, which is of type Gorilla as  \\_&#95;main_\\_.Gorilla shows, and its memory location: 0x000001ACC8201828. This is the built-in function \\_&#95;str_\\_() of python. We can change the printing behaviour of the object by overwriting \\_&#95;str_\\_() in our class."
+    "However the second code line refers to our object, kingkong, our Gorilla named \"King Kong\" and 15 years of age. But what is our function print actually doing? What is this weird output doing? It tells us about our object kingkong, which is of type Gorilla as  \\_&#95;main_\\_.Gorilla indicates, and it also shows us our object's memory location: 0x000001ACC8201828. This is the built-in function \\_&#95;str_\\_() of python. We can change the printing behaviour of the object by overwriting \\_&#95;str_\\_() in our class."
    ]
   },
   {
@@ -626,17 +626,17 @@
    "metadata": {},
    "source": [
     "<a id=\"fundamental_principles\"></a>\n",
-    "## 4. Four Fundamental Principles of Object-oriented Programming\n",
+    "## Four Fundamental Principles of Object-oriented Programming\n",
     "\n",
     "<a id=\"encapsulation\"></a>\n",
-    "### 4.1 Encapsulation\n",
+    "### Encapsulation\n",
     "\n",
     "Encapsulation refers to the principle of keeping the state of each object private, inside a class. By limiting direct access to this state and only allowing the object's own public setter methods to modify state in the class, this prevents the unintentional spread of changes made in one part of a program to other parts of the program. Encapsulation is especially important in large and complex projects worked on by teams of programmers, where communication between different parts of the program must be carefully managed."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -695,7 +695,7 @@
    "metadata": {},
    "source": [
     "<a id=\"abstraction\"></a>\n",
-    "### 4.2 Abstraction\n",
+    "### Abstraction\n",
     "\n",
     "Abstraction refers to the principle of displaying essential information by hiding unnecessary information. This is done by creating sub-classes for this unnecessary information. This isolation of the information is similar to inheritance in the aspect of how it is achieved (creating specific sub-classes), but it has its own purpose: simplicity.  \n",
     "\n",
@@ -709,14 +709,14 @@
    "metadata": {},
    "source": [
     "<a id=\"inheritance\"></a>\n",
-    "### 4.3 Inheritance\n",
+    "### Inheritance\n",
     "\n",
     "Inheritance refers to how an object-oriented programming language allows the creation of (child) subclasses using the characteristics of an existing parent or superclass. In other words, the child class can inherit attributes from the parent class. By simply inheriting from the parent class, we have inherited all its functionality. Python will travel up the inheritance chain (e.g. Gorilla to Monkey) until it finds the called method (init) to be executed. Now, let's customize our subclass a little bit. Adding methods for the child class is no different than adding methods for the parent class. It is not possible to remove inherited attributes, variables and methods from the subclass, as they do not exist in the subclass. However, it is possible to overwrite them, as shown in the example below."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -799,14 +799,14 @@
    "metadata": {},
    "source": [
     "<a id=\"polymorphism\"></a>\n",
-    "### 4.4 Polymorphism  \n",
+    "### Polymorphism  \n",
     "\n",
     "Polymorphism is one of the 4 pillars of OOP. It allows our program to process information differently based on their data type. This is achieved through the usage of a generic interface. Let's illustrate this with an example. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -854,7 +854,7 @@
     "\n",
     "The generic interface serves a similar purpose as a switchboard. We are now able to enter the sing() function of both Gorillas and Dolphins into this interface, which then directs our program to the correct class, allowing it to differentiate the singing() function for our data type, depending on whether it is a Gorilla and Dolphin. Differentiation of our objects is the main strength of Polymorphism. \n",
     "\n",
-    "The principles of Inheritance and Polymorphism are complementary. While Inheritance allows our sub-classes to inherit the _same_ attributes and methods as a parent or super-class, Polymorphism allows for these to _differ_ depending on which sub-class they are from. "
+    "The principles of Inheritance and Polymorphism are complementary, or go hand inhand. While Inheritance allows our sub-classes to inherit the _same_ attributes and methods as a parent or super-class, Polymorphism allows for these to __differ__ depending on which sub-class they originate from. "
    ]
   },
   {
@@ -862,10 +862,17 @@
    "metadata": {},
    "source": [
     "<a id=\"conclusion\"></a>\n",
-    "## 5. Conclusion\n",
+    "## Conclusion\n",
     "\n",
-    "Object-oriented "
+    "Object-oriented programming as a paradigm proves to be an efficient way of organising code. It enables programmers to conceptualise their coding experience differently. They may now think consider all the different parts of their program as objects interacting amongst one other. The four pillars of OOP capture the very essence of why this may be useful. **Encapsulation** isolates changes made the code, facilitating maintenance. **Abstraction** facilitates and simplifies the complexity of the code. **Inheritance** allows sub-classes to inherit aspects from their parent-class. **Polymorphism** allows sub-classes to interact differently with their parent-classes through a common interface. Both polymorphism and Inheritance go hand in hand, while one allows attributes to be the same as the parent class, the other allows them to differ. All in all, OOP provides the user with empowering and enabling tools which serve to improve the organisation and conceptualization experience of everyday programming. "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
