--- a/06_Object_Oriented_Programming.ipynb
+++ b/06_Object_Oriented_Programming.ipynb
@@ -871,9 +871,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Your turn\n",
+    "# Your turn! \n",
     "\n",
-    "You would now like to test your understanding of OOP and see if you are yourself able to apply it to a simple program. Attempt to create a date-system (in DD/MM/YY format) able to display the dates of an entire upcoming year given a starting date.  \n",
+    "You would now like to test your understanding of OOP and see if you are yourself able to apply it to a simple program.  \n",
+    "Attempt to create a date-system (in DD/MM/YY format) able to display the dates of an entire upcoming year given a starting date.  \n",
     "\n",
     "To do so, consider creating a class which: \n",
     "* given a starting point, counts upwards\n",
