--- a/06_Object_Oriented_Programming.ipynb
+++ b/06_Object_Oriented_Programming.ipynb
@@ -874,7 +874,7 @@
     "# Your turn! \n",
     "\n",
     "You would now like to test your understanding of OOP and see if you are yourself able to apply it to a simple program.  \n",
-    "Attempt to create a date-system (in DD/MM/YY format) able to display the dates of an entire upcoming year given a starting date.  \n",
+    "Attempt to create a digital-clock (in DD/MM/YY format) able to display the time of the upcoming full hour.\n",
     "\n",
     "To do so, consider creating a class which: \n",
     "* given a starting point, counts upwards\n",
@@ -882,15 +882,17 @@
     "* consider the case of when your number has a lower value than 10, we would like it to display 01, 02, 03 ...\n",
     "\n",
     "We would like to have something which returns as follows:   \n",
-    "17/11/18    \n",
-    "18/11/18   \n",
-    "19/11/18  \n",
+    "00:01  \n",
+    "00:02  \n",
+    "00:03  \n",
     "...  \n",
-    "15/11/19  \n",
-    "16/11/19  \n",
-    "17/11/19  \n",
+    "00:59  \n",
+    "01:00  \n",
+    "01:01  \n",
     "\n",
     "## Extras: \n",
+    "Let's go further, try modify the code of the previous exercise to support a date-system (in the format DD/MM/YY). This may prove more difficult as the upper limit will now depend on our month, since not every month has the same number of days. \n",
+    "\n",
     "What would you have to change if you wanted your program to consider leap years (years in which we have 366 days)?   \n",
     "Hint: Leap years are divisible by 4, for example 2004 is a leap year, 2008 is also a leap year. Different rules apply for centuries, but for the sake of simplicity let's ignore that. "
    ]
