--- a/06_Object_Oriented_Programming.ipynb
+++ b/06_Object_Oriented_Programming.ipynb
@@ -614,7 +614,7 @@
     "| hash(x)  | \\_&#95;hash\\__(self) | integer hash code for x |\n",
     "| iter(x)  | \\_&#95;iter\\__(self) | iterator for x |\n",
     "\\begin{align*}\n",
-    "\\href{http://www.sharelatex.com}{Table Source} \n",
+    "\\href{https://docs.python.org/3/reference/datamodel.html#basic-customization}{Table Source} \n",
     "\\end{align*}"
    ]
   },
